--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Hold Shift to Check Multiple Checkboxes</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <style>
-
     html {
       font-family: sans-serif;
       background: #ffc600;
@@ -18,7 +19,7 @@
       margin: 50px auto;
       background: white;
       border-radius: 5px;
-      box-shadow: 10px 10px 0 rgba(0,0,0,0.1);
+      box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.1);
     }
 
     .item {
@@ -31,7 +32,7 @@
       border-bottom: 0;
     }
 
-    input:checked + p {
+    input:checked+p {
       background: #F9F9F9;
       text-decoration: line-through;
     }
@@ -45,13 +46,13 @@
       padding: 20px;
       transition: background 0.2s;
       flex: 1;
-      font-family:'helvetica neue';
+      font-family: 'helvetica neue';
       font-size: 20px;
       font-weight: 200;
       border-left: 1px solid #D1E2FF;
     }
   </style>
-   <!--
+  <!--
    The following is a common layout you would see in an email client.
 
    When a user clicks a checkbox, holds Shift, and then clicks another checkbox a few rows down, all the checkboxes inbetween those two checkboxes should be checked.
@@ -95,8 +96,39 @@
       <p>Don't forget to tweet your result!</p>
     </div>
   </div>
+  <script>
+    const checkboxes = document.querySelectorAll('input');
 
-<script>
-</script>
+      let lastChecked;
+
+      function handleCheck(e) {
+        let inBetween = false;
+        if (e.shiftKey && this.checked && lastChecked && lastChecked !== this) {
+          checkboxes.forEach(checkboxe => {
+            if (checkboxe === this || checkboxe === lastChecked) {
+              inBetween = !inBetween;
+            }
+            if (inBetween) {
+              checkboxe.checked = true;
+            }
+          })
+        }
+        if (e.shiftKey && !this.checked && !lastChecked.checked && lastChecked !== this) {
+          checkboxes.forEach(checkboxe => {
+            if (checkboxe === this || checkboxe === lastChecked) {
+              inBetween = !inBetween;
+            }
+            if (inBetween) {
+              checkboxe.checked = false;
+            }
+          })
+        }
+        lastChecked = this;
+      }
+
+      checkboxes.forEach(checkboxe => checkboxe.addEventListener('click', handleCheck));
+
+    </script>
 </body>
+
 </html>
