--- a/18 - Adding Up Times with Reduce/index-START.html
+++ b/18 - Adding Up Times with Reduce/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Videos</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <ul class="videos">
     <li data-time="5:43">
@@ -182,7 +184,26 @@
       Video 58
     </li>
   </ul>
-<script>
+  <script>
+      const timeNodes = [...document.querySelectorAll('[data-time]')];
+
+      const seconds = timeNodes
+        .map(node => node.dataset.time)
+        .map(timeCode => {
+          const [min, seg] = timeCode.split(':').map(parseFloat);
+          return (min * 60) + seg;
+        }).reduce((total, vidSeconds) => total + vidSeconds);
+
+      let secondsLeft = seconds;
+      const hours = Math.floor(seconds / (60 * 60));
+      secondsLeft = seconds % (60 * 60);
+
+      const min = Math.floor(secondsLeft / 60);
+      secondsLeft = Math.floor(secondsLeft / 60);
+
+      console.log(hours, min, secondsLeft);
+
 </script>
 </body>
+
 </html>
