--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -1,21 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Video Speed Scrubber</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
 
   <div class="wrapper">
     <video class="flex" width="765" height="430" src="http://clips.vorwaerts-gmbh.de/VfE_html5.mp4" loop controls></video>
     <div class="speed">
-      <div class="speed-bar">1×</div>
+      <div class="speed-bar">1.00×</div>
     </div>
   </div>
 
-<script>
+  <script>
+      const video = document.querySelector('.flex');
+      const speed = document.querySelector('.speed');
+      const bar = speed.querySelector('.speed-bar');
+
+      let isDown = false;
+
+      function handleMove(e) {
+        if (!isDown) return;
+
+        const y = e.pageY - this.offsetTop;
+        const percent = y / this.offsetHeight;
+
+        const height = Math.round(percent * 100) + '%';
+        bar.style.height = height;
+
+
+        const min = 0.4;
+        const max = 4;
+        const playbackRate = percent * (max - min) + min;
+        bar.textContent = playbackRate.toFixed(2) + 'x';
+
+        video.playbackRate = playbackRate;
+      }
+
+
+      speed.addEventListener('mousedown', () => isDown = true);
+      speed.addEventListener('mouseup', () => isDown = false);
+      speed.addEventListener('mousemove', handleMove);
 </script>
 </body>
+
 </html>
